Fixed look on smaller devices

--- a/src/Component/TabMenu.css
+++ b/src/Component/TabMenu.css
@@ -91,8 +91,7 @@
 }
 @media (max-width: 1000px) {
   .tab-menu-container {
-    width: 100vw;
-    margin-left: 18vw;
+    width: 80vw;
   }
   
 }
